--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
